assets/styles/layouts/_portfolio-project.scss
.portfolio-project {
	background-color: $white; //  $background-gray $body-text
	// background-color: $body-text;
	color: $body-text; //$background-gray
	// color: $background-gray;


	a{
		//color: $orange;

		text-decoration: none;
		// border-bottom: 2px solid $orange; //$white
		// box-shadow: inset 0 -4px 0 $orange; //$white

		&:hover {
			// background-color:$orange ; //$white
		}
	}

	article {
		//padding: 3em 0;
		font-size: 1.2em;

		p {
			margin: 0;
		}

		.header-container {
			font-size: 1rem;
			background-color: $white; //$background-gray
			padding: 3em 0 5em;
			//margin-bottom: 2em;

			header {
				background-color: transparent;
				//text-align: center;
				flex-wrap: wrap;
				height: auto;
				//color: $white;
				color: $body-text;
				display: flex;
				justify-content: space-between;
				align-items: flex-start;

				.project-title {
					flex-basis: 500px;
					padding-right: 10%;
					flex-grow: 3;

					h1 {
						font-size: 2.441em;
						width: 100%;
						color: $body-text;
						text-transform: uppercase;
						letter-spacing: .3em;
						text-shadow: 2px 2px $white, 4px 4px $medium-gray ;  //$medium-gray $background-gray

						@include breakpoint(phone) {
							font-size: 1.953em;
						};

						&:after {
						  content: " ";
						  display: block;
						  background-color: $medium-gray ; //$background-gray $white
						  height: 5px;
						  width: 60px;
						  margin: 1em 0;
						  top: 1em;
						}
					}

					h2 {
						@extend .serif;
						width: 100%;
						font-size: 1.8em;//font-size: 1.5em;
						line-height: 1.25em;
						font-weight: bold;//font-weight: normal;
						border-bottom: none;
						padding: 0;
					}

				}

				.project-meta-info {
				  display: flex;
				  border: 2px solid $medium-gray  ; //$background-gray $medium-gray $white
				  justify-content: start;
				  margin: 1em 0;
				  flex-basis: 400px;
				  flex-direction: row;
				  font-weight: bold;
				  //font-size: .8em;
				  line-height: 1.25em;
				  padding: 1em;
				  flex-grow: 1;
				  flex-wrap: wrap;

					.small-caps {
				  	//color: $orange;
				  	font-weight: normal;
				  }

					div {
						flex-basis: 150px;
						flex-grow: 1;
						margin-bottom: .5em;

						&:first-child {
							border-bottom: 2px solid $medium-gray ; //$background-gray #fff
							color: rgb(61, 61, 61);
							/* background-color: white; */
							width: 100%;
							height: 2em;
							margin: -17px -17px 10px;
							padding: 0 15px;
							flex-basis: 1000px;
						}


						&:nth-child(4){
							flex-basis: 300px;
							flex-grow: 5;
							margin-bottom: 1em;
						}

						&:last-child {
							flex-basis: 400px;
							flex-grow: 1;
						}
					}
					p {
						margin: .25em;
					}
					ul {
						padding-left: 1.25em;
						margin: 0;
						font-family:'Warehouse Gothic', Helvetica Neue, sans-serif;
					}

					a {

						flex-basis: 300px;
						text-decoration: none;
						border: 2px solid $medium-gray ; //$background-gray $white
						box-shadow: none;
						background-color: $white; //$background-gray
						padding: .25em .6em .45em;
						transition: .35s ease;
						// position: relative;
						// top: calc(3em - 2px);
						// left: calc(-1.25em - 2px);
						position: absolute;
					  bottom: -2.6em;
					  right: -2.25em;

						@include breakpoint(tablet) {
							right: 2.25em;
							//bottom: -2.6em;
						}

						@include breakpoint(tiny-window) {
							bottom: -3.6em;
						}

						&::after{
							content: "\2192";
							display: inline-block;
						  margin: 0 -.1em 0 .25em;
						  font-size: 1.1em;
							transform: rotate(-45deg) translate(-1px);

							&:hover {
								color: $orange;

							}
						}

						&:hover {
							//border: 2px solid $orange;
							color: $orange; //$body-text
							background-color: $white;
							transition: .35s ease;
							box-shadow: 2px 2px $medium-gray, 4px 4px $orange;
						}
					}


				}


			}
		}
		img {
			//filter: grayscale(1);
			outline: 0px solid rgba($white, 0);
			transition: .5s ease-in;
			margin: .5em 0 0; //margin: 2em 0 1em; //.5em 0
			// position: relative;
			// top: -2.25em;
			// &:hover {
			// 	//filter: grayscale(0);
			// 	outline: 5px solid rgba($white, 1);
			// 	transition: .5s ease-out;
			// }
		}



		.opening-description {
			background-color: $background-gray; //rgba($medium-gray, 0.35); $medium-gray; rgba($medium-gray, 0.54); //$background-gray ; //previously $white $body-text

			p {
				color: $body-text; // $white $background-gray
			}

			.hero-wrap{
				float:left;
				width: 55%;

				@include breakpoint(tablet) {
					width: 100%;
				}

				.project-hero-image {
					//width: 55%;
					//float: left;
					position: relative;
					top: -4.5em;
					margin-bottom: -4.75em;
					//margin: .5em 0 -20em;

					@include breakpoint(tablet) {
						width: 100%;
						//top: 0;
						//margin-bottom: 0;
						    margin-bottom: -2.25em;
					}

					img {
						max-width: 100%;
					}

					&::before {
							height: 1em;

							@include breakpoint(phone) {
								height: .75em;
							}
					}
				}

				.project-hero-image.screenshot{
					top: -5em;
					margin-bottom: -4.65em;
					border-radius: .25vw;

					@include breakpoint(tablet) {
						margin-bottom: -2.65em;
					}
				}
				// .one-paragraph-description {
				// 	//border-left: 4px solid $background-gray;
				// 	//margin: 4em auto;
				// 	//width: 100%;
				// 	//margin: 1em;
				// 	font-size: 1.05em;
				// 	line-height: 1.5em;
				//
				// 	float: right;
				//
				// 	color: $white; // $background-gray
				// 	font-family:'Warehouse Gothic', Helvetica Neue, sans-serif;

				p.caption {
					font-size: .8em;
					color: $body-text; // $white
					margin-top: 2.5em;
					//float: left;
	  			//width: 55%;
					@include breakpoint(tablet) {
						// width: 100%;
						position: relative;
						max-width: 650px; //600px
				    margin: 0em auto;
				    margin-top: 0;
				    float: none;
	  				//top: .5em;
					}
				}
			}

				p.one-paragraph-description {

					font-size: 1em; //1.05em
					line-height: 1.5em;

					float: right;

					font-family:'Warehouse Gothic', Helvetica Neue, sans-serif;

					width: 40%;
					margin: 2em auto;

					@include breakpoint(tablet) {
						width: auto;
				    max-width: 650px; //600px
				    margin: 1em auto;
				    margin-top: 0;
				    float: none;

					}

					a {
						color: $body-text; // $white

						&:hover{
							color: $orange;
						}
					}
				}
			//}

			// }
		}
		.screenshot {
			overflow:hidden;
			border-radius: 5px;
			box-shadow: 0 .8vw 1.5vw 0 rgba(0,0,0,.35);
			background-color:#ddd;
			margin: 2.5em auto;

			&::before{
				content: "";
				background-image: url(../images/browser_toolbar_2.svg);
				/* -webkit-background-size: 1000px 40px; */
				background-size: 100% 100%;
				display: block;
				width: auto;
				height: 32px;
			}
			img {
				width:100%;
				margin: 0;
				//border-radius: 0px 0px 4px 4px;
				// margin-bottom:-.5vw;
			}
		}



		.deeper-description{
		  padding: 2em 15px 4em;

			h2 {
				margin: 2em auto 0;
			}

			h3,h4 {
				font-weight: bold;
		    max-width: 650px; //600px
		    margin: 2em auto -.7em;

			}

			h4{
				@extend .serif;
				font-size: 23px;
			}

			.description, p {
				@extend .serif;
				font-size: 23px; //21px
				max-width: 650px; //600px
				margin: 1em auto;
				line-height: 1.5em;

				@include breakpoint(phone) {
					font-size: 20px;
				}
			}

			.screenshot {
				//margin: 2em 10%;
				margin: 2.4em auto;
				width: 80%;

				@include breakpoint(tablet) {
					width: 100%;
				}

				@include breakpoint(phone) {
					border-radius: 3px;
					margin: 2em 0;
				}

				&::before {
						height: 1.5em;

						@include breakpoint(tablet) {
							height: 1.2em;
						}

						@include breakpoint(phone) {
							height: .9em;
						}
						@media (max-width: 400px) {
							height: .65em;
						}
				}
			}
			.caption {
				font-family:'Warehouse Gothic', Helvetica Neue, sans-serif;
				font-size: .8em;
				margin: 2.8em auto 1em; //2.8em auto -2em;  //2em 1.5em
			}

			// p{
			// 	@extend .serif;
			// 	max-width: 600px;
			// 	margin: 0em auto;
			// 	font-size: 1.25em;
			// 	line-height: 1.5em;
			// 	// color: $orange;
			// }
			//
			// 	font-size: .8em;
			// 	position: relative;
			// 	top: -2.3em;
			// 	margin: .5em 0;
			// 	font-weight: bold;
			// 	//border-top: 2px solid $body-text;
			// }

			ol, ul{
				@extend .description;
			}



		}

		.img--half-width {
			img {
		    width: 48%;
		    //float: left;
				margin-top: 2%;
				padding: 0 1%;
			}
			img:nth-child(even) {
				float: right;
				//padding: 0 0 1% 2%;
			}
}

	}

	.pagination{
		width: 100%;
		display: flex;
		justify-content: space-between;
		overflow: hidden;
		margin-bottom: 3em;
		font-weight: bold;

		div {

			// width: 49.5%;
			// border: 2px solid $white;
			// padding: 2em;
			// margin: .1em;
			display: flex;
			margin-bottom: 2em;
		}

		a{
			max-width: 49.5%;
			flex-grow: 1;
			border-bottom: none;
			box-shadow: none;
			border: 2px solid $medium-gray; //$white
			padding: 2em 2.5em;
			//margin: .1em;
			transition: .25s ease-in;

			@include breakpoint(phone) {
				padding:1em 1em;
			}


			&:hover {
				//padding: 2em 1.75em;
				transition: .5s ease-out;
			}

			&:first-child {
				position: relative;
				right:.5em;
				text-align: right;

				&:hover{
					transform: translateX(-1em);

					@include breakpoint(phone) {
						transform: translateX(-.25em);
					}

					&::after {
						transform: translateX(1em);
						transition: ease-out .5s;
					}
				}
				&::before{
					content: "\2190";
					position: relative;
					right: .5em;
					@include breakpoint(phone) {
						//top:-1.5em;
					}
				}
				&::after{
					content: "PREVIOUS";
					letter-spacing: .25em;
					font-size: 1em;
					position: absolute;
					top: .5em;
					right: 2.25em;
					z-index: -1;
					color: $medium-gray; //$background-gray
					transition: ease-in .25s;
				}
			}
			&:last-child{
				align-self: flex-end;
				//text-align: right;
				position: relative;
				left:.5em;
				&:hover{
					transform: translateX(1em);
					@include breakpoint(phone) {
						transform: translateX(.25em);
					}
					&::before {
						transform: translateX(-1em);
						transition: ease-out .5s;
					}
				}
				&::before{
					//content: "";
					content: "NEXT";
					letter-spacing: .25em;
					font-size: 1em;
					position: absolute;
					top: .5em;
					z-index: -1;
					color: $medium-gray; //$background-gray
					transition: ease-in .25s;
				}
				&::after{
					content: "\2192";
					position: relative;
    			right: -.5em;
					@include breakpoint(phone) {
						//top:-1.5em;
					}
				}
			}

			// &:nth-of-type(1){
			// 	transition: .25s ease-in;
			// 	&:hover{
			// 		position: relative;
			// 		right:1em;
			// 		transition: .5s ease-out;
			// 	}
			// }
		}

		.next-post {
			text-align: right;

			//float: left;

			// &::before{
			// 	content: "\2190";
			// 	position: relative;
			// 	right: -1.5em;
			// 	top: 2.2em;
			// }
		}

		.prev-post {
			//float: right;
			// text-align: right;

			// &::after{
			// 	content: "\2192";
			// 	position: relative;
			// 	right: 1.5em;
			// 	top: 2.2em;
			// }

		}
	}

}

.xl-img {
	margin-top: 1.5em;
}

.drop-shadow{
	box-shadow: 0 2px 3px 0 rgba(0,0,0,.35);
}

iframe {
	margin: 0 auto !important;
}

